Fri Jan 13 11:25:31 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/geospatial.h: Don't need <xapian/enquire.h> (probably
	  left over from when there was a MatchDecider subclass here).  Sort
	  remaining xapian headers into alphabetical order.

Fri Jan 13 11:06:02 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/geospatial.h: Don't need XAPIAN_VISIBILITY_DEFAULT on
	  inline functions.

Fri Jan 13 11:04:14 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/geospatial.h: Convert descriptions of exceptions to
	  use doxygen @exception.

Fri Jan 13 05:48:29 GMT 2012  Olly Betts <olly@survex.com>

	* tests/api_geospatial.cc: Doesn't use <xapian/error.h>.

Fri Jan 13 05:45:59 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/geospatial.h: Rearrange order of classes to avoid the
	  need to forward declare LatLongCoordsIterator.

Fri Jan 13 05:37:18 GMT 2012  Olly Betts <olly@survex.com>

	* tests/api_geospatial.cc: Don't skip latlongpostingsource1 for chert
	  - contrary to the comment, chert supports this testcase fine.

Fri Jan 13 05:36:55 GMT 2012  Olly Betts <olly@survex.com>

	* tests/api_geospatial.cc: Doesn't use <iomanip>.

Fri Jan 13 05:28:11 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/geospatial.h: Fix LatLongCoord::operator<() so that
	  a<b and b<a can't both be true.
	* tests/api_geospatial.cc: Extend latlongcoords1 to provide a
	  regression test for this.

Thu Jan 12 22:31:57 GMT 2012  Olly Betts <olly@survex.com>

	* geospatial/latlong_distance_keymaker.cc: Check if the value string
	  is empty, rather than decoding to a LatLongCoords and then checking
	  that.

Thu Jan 12 22:18:05 GMT 2012  Olly Betts <olly@survex.com>

	* geospatial/latlong_distance_keymaker.cc,include/xapian/geospatial.h:
	  Rename “valno” member to “slot”.

Thu Jan 12 21:27:06 GMT 2012  Olly Betts <olly@survex.com>

	* geospatial/latlong_posting_source.cc,geospatial/latlongcoord.cc:
	  Fix include paths to serialise.h.
