@@ -1,3 +1,9 @@
+Fri Jan 13 11:41:24 GMT 2012  Olly Betts <olly@survex.com>
+
+	* include/xapian/geospatial.h: In LatLongDistanceKeyMaker, rather than
+	  defaulting the distance to the rather arbitrary 10E10, default the
+	  key to string(9, '\xff'), which is sortable_serialise(HUGE_VAL).
+
 Fri Jan 13 11:25:31 GMT 2012  Olly Betts <olly@survex.com>
 
 	* include/xapian/geospatial.h: Don't need <xapian/enquire.h> (probably
